@@ -1,3 +1,7 @@
+2019-06-15  Jan Hubicka  <hubicka@ucw.cz>
+
+	* gcc.dg/tree-ssa/alias-access-path-2.c: New testcase.
+
 2019-06-15  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	* gfortran.dg/ieee/ieee_4.f90: Un-xfail on i?86-*-freebsd.
